# builder

./: .gitignore  README.md  builder.py  pyproject.toml  reflect.py
src/immutable-builder/: builder.py  registry.py
