[tool.poetry]
name = "builder"
version = "0.1.0"
description = "Immutable builder, carbon copy of lann/builder in GoLang."
authors = ["damacaner <caner@damacana.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
